unpackaged/main/default/objects/Activity/fields/Call_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Call_Disposition__c</fullName>
    <label>Call Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>Left Voicemail</fullName>
            </value>
            <value>
                <fullName>Voicemail Full</fullName>
            </value>
            <value>
                <fullName>Suspected Fraud</fullName>
            </value>
            <value>
                <fullName>Contacted Client</fullName>
            </value>
            <value>
                <fullName>Refused Help</fullName>
            </value>
            <value>
                <fullName>Disconnected Number</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
            <value>
                <fullName>End Call</fullName>
            </value>
            <value>
                <fullName>No Disposition</fullName>
            </value>
            <value>
                <fullName>Caller_Disconnected</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>