unpackaged/main/default/objects/Activity/fields/Credit_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Type__c</fullName>
    <label>Credit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Questionnaire User</fullName>
            </value>
            <value>
                <fullName>Final Intake User</fullName>
            </value>
            <value>
                <fullName>Turn Down User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>