unpackaged/main/default/objects/Activity/fields/Five9ANI__c.field-meta.xml
<CustomField>
    <fullName>Five9ANI__c</fullName>
    <label>Five9 ANI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>