unpackaged/main/default/objects/Activity/fields/Five9Campaign__c.field-meta.xml
<CustomField>
    <fullName>Five9Campaign__c</fullName>
    <label>Five9 Campaign</label>
    <length>50</length>
    <type>Text</type>
</CustomField>