unpackaged/main/default/objects/Activity/fields/FX_Questionnaire_Credit__c.field-meta.xml
<CustomField>
    <fullName>FX_Questionnaire_Credit__c</fullName>
    <description>Formula field - If the related Intake&#39;s Status = Referred Out AND Intake Vendor contains Saddle Rock AND the task owner equals the 1st Questionnaire User AND Questionnaire User is not blank/null THEN 1, ELSE 0</description>
    <formula>IF( 
				ISPICKVAL(Credit_Type__c, &#39;1st Questionnaire User&#39;)
				&amp;&amp; ISPICKVAL(Intake__r.litify_pm__Status__c, &#39;Referred Out&#39;) 
    &amp;&amp; CONTAINS(Intake__r.Intake_Vendor__r.Name, &#39;Saddle Rock&#39;) 
    &amp;&amp; OwnerId = Intake__r.X1st_Questionnaire_User__c
				&amp;&amp; NOT(ISBLANK(Intake__r.X1st_Questionnaire_User__c)),
    1,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field - If the related Intake&#39;s Status = Referred Out AND Intake Vendor contains Saddle Rock AND the task owner equals the 1st Questionnaire User AND Questionnaire User is not blank/null THEN 1, ELSE 0</inlineHelpText>
    <label>Questionnaire Credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>