unpackaged/main/default/objects/Activity/fields/FX_Referred_Out_Credit__c.field-meta.xml
<CustomField>
    <fullName>FX_Referred_Out_Credit__c</fullName>
    <description>Formula field - If the related Intake&#39;s Status = Referred Out AND the task owner equals the Final Intake User AND Final Intake User is not blank/null THEN 1, ELSE 0</description>
    <formula>IF(
    ISPICKVAL(Credit_Type__c, &#39;Final Intake User&#39;)
				&amp;&amp; ISPICKVAL(Intake__r.litify_pm__Status__c, &#39;Referred Out&#39;) 
    &amp;&amp; OwnerId = Intake__r.Final_Intake_User__c
				&amp;&amp; NOT(ISBLANK(Intake__r.Final_Intake_User__c )),
    1,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field - If the related Intake&#39;s Status = Referred Out AND the task owner equals the Final Intake User AND Final Intake User is not blank/null THEN 1, ELSE 0</inlineHelpText>
    <label>Referred Out Credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>