unpackaged/main/default/objects/Activity/fields/FX_Turn_Down_Rejected_CV_Credit__c.field-meta.xml
<CustomField>
    <fullName>FX_Turn_Down_Rejected_CV_Credit__c</fullName>
    <description>Formula field - If the related Intake&#39;s Record Type = Case Verification AND Sub-Status = Case Rejected AND the task owner equals the Turn Down User AND Turn Down User is not blank/null THEN 1, ELSE 0</description>
    <formula>IF(
    ISPICKVAL(Credit_Type__c, &#39;Turn Down User&#39;)
				&amp;&amp; Intake__r.RecordType.Name = &#39;Case Verification&#39;
				&amp;&amp; ISPICKVAL(Intake__r.Sub_Status__c, &#39;Case Rejected&#39;)
    &amp;&amp; OwnerId = Intake__r.Turn_Down_User__c
				&amp;&amp; NOT(ISBLANK(Intake__r.Turn_Down_User__c)),
    1,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field - If the related Intake&#39;s Record Type = Case Verification AND Sub-Status = Case Rejected AND the task owner equals the Turn Down User AND Turn Down User is not blank/null THEN 1, ELSE 0</inlineHelpText>
    <label>Turn Down Rejected CV Credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>