unpackaged/main/default/objects/Activity/fields/Intake_Stage_at_Time_of_Call__c.field-meta.xml
<CustomField>
    <fullName>Intake_Stage_at_Time_of_Call__c</fullName>
    <label>Intake Stage at Time of Call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Attorney Review</fullName>
            </value>
            <value>
                <fullName>Need Information</fullName>
            </value>
            <value>
                <fullName>Case Wanted</fullName>
            </value>
            <value>
                <fullName>Retainer Agreement Sent</fullName>
            </value>
            <value>
                <fullName>Retainer Agreement Signed</fullName>
            </value>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>Turned Down</fullName>
            </value>
            <value>
                <fullName>Referred Out</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>