unpackaged/main/default/objects/Activity/fields/Intake_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Intake_Sub_Status__c</fullName>
    <label>Intake Sub Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>