unpackaged/main/default/objects/Activity/fields/Ringba_Call__c.field-meta.xml
<CustomField>
    <fullName>Ringba_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ringba Call</label>
    <referenceTo>Ringba_Call__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>