unpackaged/main/default/objects/Activity/fields/WhatId_First_3_Chars__c.field-meta.xml
<CustomField>
    <fullName>WhatId_First_3_Chars__c</fullName>
    <description>First 3 characters of the whatId</description>
    <formula>LEFT(WhatId, 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>First 3 characters of the whatId</inlineHelpText>
    <label>WhatId First 3 Chars</label>
    <type>Text</type>
</CustomField>